Fixed vertical scroll on small screens, fixed incorrect bg color

--- a/components/AppDevelopmentCommon/CardsSection/styles.module.scss
+++ b/components/AppDevelopmentCommon/CardsSection/styles.module.scss
@@ -788,6 +788,7 @@
   }
 
   &.thirdSectionView {
+    background: $alabaster;
     padding-bottom: 150px;
 
     @include below-tablet {
