--- a/components/AppDevelopmentCommon/ReviewsSection/Reviews/styles.module.scss
+++ b/components/AppDevelopmentCommon/ReviewsSection/Reviews/styles.module.scss
@@ -29,7 +29,7 @@
 
     @include phone {
       display: block;
-      width: 100vw;
+      width: 100%;
     }
 
     :global(.swiper-container) {
